--- a/Css/style.css
+++ b/Css/style.css
@@ -4,31 +4,118 @@ body{
   color:rgb(54, 52, 52);
 }
 
-.menuPpal{ 
-  margin: 0rem ;
-  padding: 0rem;
-  background-color: rgb(187, 200, 176);
-  text-align: right;
-  font-size: 1.2rem;  
-  cursor: pointer;
-  position: sticky;
-  position: -webkit-sticky;
- }
-
-.caja{
-  display: inline-block;
-  padding-bottom: 0rem;
-  vertical-align: middle;
-  margin: 0.5rem 1rem 0.5rem 1rem ;
+@media only screen and (max-width: 1500px){
+  .titulo {
+    position: absolute;
+    top: 2.5px;
+    left: 30px;
+    font-size: 7rem;
+    color: rgb(16, 48, 16);
+    margin: 0rem;
+    text-shadow: 5px 5px 8px #2b4616;
+    animation: backInRight;
+    animation-duration: 5s;
+  }
+  .titulo:first-letter{
+   font-size: 10rem;
+  }
+ .parrafo {
+  position: absolute;
+  top: 25rem;
+  text-align: center;
+  color: white;
+  font-size: 2rem;
+  }
+  .menuPpal{ 
+    margin: 0rem ;
+    padding: 0rem;
+    background-color: rgb(187, 200, 176);
+    text-align: right;
+    font-size: 1.2rem;  
+    cursor: pointer;
+  }
+  .menuPpal:hover{
+    font-size: 1.4rem;
+    font-weight: bold;
+  }
 }
 
-.menuPpal :hover{
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: rgb(12, 66, 66);
+@media only screen and (max-width: 1000px){
+  .titulo {
+    position: absolute;
+    top: 2.5px;
+    left: 30px;
+    font-size: 5rem;
+    color: rgb(16, 48, 16);
+    margin: 0rem;
+    text-shadow: 5px 5px 8px #2b4616;
+    animation: backInRight;
+    animation-duration: 5s;
   }
+  .titulo:first-letter{
+   font-size: 7rem;
+  }
+ .parrafo {
+  position: absolute;
+  top: 18rem;
+  text-align: center;
+  color: white;
+  font-size: 1.3rem;
+  }
+  .menuPpal{ 
+    margin: 0rem ;
+    padding: 0rem;
+    background-color: rgb(187, 200, 176);
+    text-align: right;
+    font-size: 1rem;  
+    cursor: pointer;
+  }
+  .menuPpal:hover{
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-decoration-color: blueviolet;
+    color: rgb(12, 66, 66);
+  }
+}
 
-.menuPpal>img{
+ @media only screen and (max-width: 600px){
+ .titulo {
+  position: absolute;
+  top: 2.5px;
+  left: 30px;
+  font-size: 2rem;
+  color: rgb(16, 48, 16);
+  margin: 0rem;
+  text-shadow: 5px 5px 8px #2b4616;
+  animation: backInRight;
+  animation-duration: 5s;
+  }
+ .titulo:first-letter{
+   font-size: 3rem;
+  }
+ .parrafo {
+  position: absolute;
+  top: 6rem;
+  text-align: center;
+  color: white;
+  font-size: 0.8rem;
+  } 
+  .menuPpal{ 
+    margin: 0rem ;
+    padding: 0rem;
+    background-color: rgb(187, 200, 176);
+    text-align: right;
+    font-size: 0.8rem;  
+    cursor: pointer;
+  }
+  .menuPpal:hover{
+    font-size: 0.8rem;
+    font-weight: bold;
+    text-decoration-color: blueviolet;
+    color: rgb(12, 66, 66); 
+}
+
+.logo{
   width: 5rem;
   height: 5rem;
   margin: 0rem 0.5rem 0rem 0rem;
@@ -36,91 +123,9 @@ body{
   padding: 0rem;
   vertical-align: middle;
 }
- 
-.titulo{
-  position: absolute;
-  top: 3px;
-  left: 30px;
-  font-size: 7rem;
-  color: rgb(16, 48, 16);
-  margin: 0rem;
-  text-shadow: 5px 5px 8px #2b4616;
-  animation: backInRight;
-  animation-duration: 5s;
-}
 
-.titulo:first-letter{
-  font-size: 10rem;
- }
-
- .parrafo {
-  margin-top: 38rem;
-  text-align: end;
-  color: white;
-  font-size: 1.8rem;
- }
-
-
-
-.compraVenta{
-  width: 20rem;
-  margin: 0rem;
-  border: solid;
-  border-color: rgb(150, 155, 155);
-  border-style: groove;
-  padding: 0;
-}
-  
-.compraVenta > img{
-  width: 100%;
-  padding: 0rem;
-}
-
-.alquiler{
-  width: 20rem;
-  margin: 0rem;
-  border: solid;
-  border-color: rgb(150, 155, 155);
-  border-style: groove;
-  padding: 0;
-}
-
-.alquiler > img{
-  width: 100%;
-  padding: 0rem;
-}
-
-.mantenimiento{
-  width: 20rem;
-  margin: 0rem;
-  border: solid;
-  border-color: rgb(150, 155, 155);
-  border-style: groove;
-  padding: 0;
-}
-
-.mantenimiento > img{
-  width: 100%;
-  padding: 0rem;
-}
-
-.obras{
-  width: 20rem;
-  margin: 0rem;
-  border: solid;
-  border-color: rgb(150, 155, 155);
-  border-style: groove;
-  padding: 0;
-}
-
-.obras > img{
-  width: 100%;
-  padding: 0rem;
-}
-
-.descripcion{
-  padding: 0rem 0.7rem 0.5rem 0.7rem;
-  text-align: justify;
+.fotoPlaya{
+  position: relative;
 }
 
 h2{
@@ -134,58 +139,8 @@ p{
 
 .formulario{
   background-color: rgb(187, 200, 176);
-  padding: 2rem;
+  padding: 2rem 5rem 2rem 5rem;
   color: rgb(24, 24, 34);
+  margin: 0rem;
 }
 
-@media only screen and (max-width: 1500px);{
-  body{
-   background-color:rgb(173, 192, 160);
- }
-   .titulo {
-       font-size: 7rem;
-   
-  }
-   .titulo:first-letter{
-   font-size: 10rem;
-  }
-  .parrafo {
-       font-size: 1.8rem;
-  }
-}
-
-@media only screen and (max-width: 1000px);{
-  body{
-   background-color:rgb(173, 192, 160);
- }
-  .titulo {
-   
-   font-size: 5rem;
-   
-  }
-   .titulo:first-letter{
-   font-size: 7rem;
-  }
-  .parrafo {
-   
-   font-size: 1.3rem;
-  }
-
-  @media only screen and (max-width: 600px);{
-    body{
-     background-color:rgb(173, 192, 160);
-   }
-    .titulo {
-     
-     font-size: 3rem;
-     
-    }
-     .titulo:first-letter{
-     font-size: 5rem;
-    }
-    .parrafo {
-     
-     font-size: 0.9rem;
-    }
-  
-}
