--- a/Css/style.css
+++ b/Css/style.css
@@ -119,7 +119,8 @@ body{
   top: 6rem;
   text-align: center;
   color: white;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
+  font-weight: bold;
   } 
   .menuPpal{ 
     margin: 0rem ;
