--- a/Css/style.css
+++ b/Css/style.css
@@ -1,11 +1,10 @@
-
-body{ 
+body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color:rgb(54, 52, 52);
+  color: rgb(54, 52, 52);
   background-color: rgb(187, 200, 176);
 }
 
-@media only screen and (max-width: 1500px){
+@media only screen and (max-width: 1500px) {
   .titulo {
     position: absolute;
     top: 2.5px;
@@ -17,33 +16,39 @@ body{
     animation: backInRight;
     animation-duration: 5s;
   }
-  .titulo:first-letter{
-   font-size: 10rem;
+
+  .titulo:first-letter {
+    font-size: 10rem;
   }
- .parrafo {
-  position: absolute;
-  top: 25rem;
-  text-align: center;
-  color: white;
-  font-size: 2rem;
+
+  .parrafo {
+    position: absolute;
+    top: 25rem;
+    text-align: center;
+    color: white;
+    font-size: 2rem;
   }
-  .menuPpal{ 
-    margin: 0rem ;
+
+  .menuPpal {
+    margin: 0rem;
     padding: 0rem;
     background-color: rgb(187, 200, 176);
     text-align: right;
-    font-size: 1.2rem;  
+    font-size: 1.2rem;
     cursor: pointer;
   }
-  .menuPpal:hover{
+
+  .menuPpal:hover {
     font-size: 1.4rem;
     font-weight: bold;
   }
-  p{
+
+  p {
     text-align: justify;
     margin: 2rem 0.5rem 0.5rem 0.5rem;
   }
-  .formulario{
+
+  .formulario {
     background-color: rgb(187, 200, 176);
     padding: 2rem 5rem 2rem 5rem;
     color: rgb(24, 24, 34);
@@ -51,7 +56,7 @@ body{
   }
 }
 
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1000px) {
   .titulo {
     position: absolute;
     top: 2.5px;
@@ -63,97 +68,109 @@ body{
     animation: backInRight;
     animation-duration: 5s;
   }
-  .titulo:first-letter{
-   font-size: 7rem;
+
+  .titulo:first-letter {
+    font-size: 7rem;
   }
- .parrafo {
-  position: absolute;
-  top: 15rem;
-  text-align: center;
-  color: white;
-  font-size: 1.3rem;
+
+  .parrafo {
+    position: absolute;
+    top: 15rem;
+    text-align: center;
+    color: white;
+    font-size: 1.3rem;
   }
-  .menuPpal{ 
-    margin: 0rem ;
+
+  .menuPpal {
+    margin: 0rem;
     padding: 0rem;
     background-color: rgb(187, 200, 176);
     text-align: right;
-    font-size: 1rem;  
+    font-size: 1rem;
     cursor: pointer;
   }
-  .menuPpal:hover{
+
+  .menuPpal:hover {
     font-size: 1.2rem;
     font-weight: bold;
     text-decoration-color: blueviolet;
     color: rgb(12, 66, 66);
   }
-  p{
+
+  p {
     text-align: justify;
     margin: 2rem 0.5rem 0.5rem 0.5rem;
   }
-  .formulario{
+
+  .formulario {
     background-color: rgb(187, 200, 176);
-    padding: 2rem 5rem 2rem 5rem;
+    padding: 2rem 3rem 2rem 3rem;
     color: rgb(24, 24, 34);
     margin: 0rem;
   }
 }
 
- @media only screen and (max-width: 600px){
- .titulo {
-  position: absolute;
-  top: 2px;
-  left: 30px;
-  font-size: 2rem;
-  color: rgb(16, 48, 16);
-  margin: 0rem;
-  text-shadow: 5px 5px 8px #2b4616;
-  animation: backInRight;
-  animation-duration: 5s;
+@media only screen and (max-width: 600px) {
+  .titulo {
+    position: absolute;
+    top: 10px;
+    left: 30px;
+    font-size: 3rem;
+    color: rgb(16, 48, 16);
+    margin: 0rem;
+    text-shadow: 5px 5px 8px #2b4616;
+    animation: backInRight;
+    animation-duration: 5s;
   }
- .titulo:first-letter{
-   font-size: 3rem;
+
+  .titulo:first-letter {
+    font-size: 4rem;
   }
- .parrafo {
-  position: absolute;
-  top: 4rem;
-  text-align: center;
-  color: white;
-  font-size: 1rem;
-  font-weight: bold;
-  } 
-  .menuPpal{ 
-    margin: 0rem ;
+
+  .parrafo {
+    position: absolute;
+    top: 15rem;
+    text-align: left;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: bold;
+  }
+
+  .menuPpal {
+    margin: 0rem;
     padding: 0rem;
     background-color: rgb(187, 200, 176);
     text-align: right;
-    font-size: 0.8rem;  
+    font-size: 0.8rem;
     cursor: pointer;
   }
-  .menuPpal:hover{
+
+  .menuPpal:hover {
     font-size: 0.8rem;
     font-weight: bold;
     text-decoration-color: blueviolet;
-    color: rgb(12, 66, 66); 
-}
-p{
-  text-align: justify;
-  margin: 2rem 0.5rem 0.5rem 0.5rem;
-}
-.formulario{
-  background-color: rgb(187, 200, 176);
-  padding: 2rem 5rem 2rem 5rem;
-  color: rgb(24, 24, 34);
-  margin: 0rem;
-}
+    color: rgb(12, 66, 66);
+  }
+
+  p {
+    text-align: justify;
+    margin: 2rem 0.5rem 0.5rem 0.5rem;
+  }
+
+  .formulario {
+    background-color: rgb(187, 200, 176);
+    padding: 2rem 1rem 2rem 1rem;
+    color: rgb(24, 24, 34);
+    margin: 0rem;
+  }
+
+  .fotoPlaya {
+    width: 400px;
+    height: 500px;
+  }
 }
 
 
-.fotoPlaya{
+.fotoPlaya {
   position: relative;
 }
-
-
-
-
-
