--- a/Css/style.css
+++ b/Css/style.css
@@ -13,8 +13,8 @@ body {
     color: rgb(16, 48, 16);
     margin: 0rem;
     text-shadow: 5px 5px 8px #2b4616;
-    animation: backInRight;
-    animation-duration: 5s;
+    animation: zoomIn;
+    animation-duration: 1s;
   }
 
   .titulo:first-letter {
@@ -27,6 +27,8 @@ body {
     text-align: center;
     color: white;
     font-size: 2rem;
+    animation: fadeInRight;
+    animation-duration: 2s;
   }
 
   .menuPpal {
@@ -65,8 +67,8 @@ body {
     color: rgb(16, 48, 16);
     margin: 0rem;
     text-shadow: 5px 5px 8px #2b4616;
-    animation: backInRight;
-    animation-duration: 5s;
+    animation: zoomIn;
+    animation-duration: 1s;
   }
 
   .titulo:first-letter {
@@ -79,6 +81,8 @@ body {
     text-align: center;
     color: white;
     font-size: 1.3rem;
+    animation: fadeInURight;
+    animation-duration: 2s;
   }
 
   .menuPpal {
@@ -114,13 +118,13 @@ body {
   .titulo {
     position: absolute;
     top: 10px;
-    left: 30px;
+    left: 20px;
     font-size: 3rem;
     color: rgb(16, 48, 16);
     margin: 0rem;
     text-shadow: 5px 5px 8px #2b4616;
-    animation: backInRight;
-    animation-duration: 5s;
+    animation: zoomIn;
+    animation-duration: 1s;
   }
 
   .titulo:first-letter {
@@ -130,10 +134,13 @@ body {
   .parrafo {
     position: absolute;
     top: 15rem;
-    text-align: left;
-    color: white;
+    text-align: center;
+    color: rgb(239, 235, 235);
     font-size: 1.1rem;
     font-weight: bold;
+    padding: 0.5rem;
+    animation: fadeInURight;
+    animation-duration: 2s;
   }
 
   .menuPpal {
