corrección márgenes formulario y animación para celular

--- a/Css/style.css
+++ b/Css/style.css
@@ -139,7 +139,7 @@ body {
     font-size: 1.1rem;
     font-weight: bold;
     padding: 0.5rem;
-    animation: fadeInURight;
+    animation: fadeInRight;
     animation-duration: 2s;
   }
 
