--- a/Css/style.css
+++ b/Css/style.css
@@ -118,7 +118,7 @@ body {
 @media only screen and (max-width: 600px) {
   .titulo {
     position: absolute;
-    top: 1rem;
+    top: 1.5rem;
     left: 1.8rem;
     font-size: 2.5rem;
     color: rgb(16, 48, 16);
@@ -134,12 +134,12 @@ body {
 
   .parrafo {
     position: absolute;
-    top: 15rem;
+    top: 12rem;
     text-align: center;
     color: rgb(239, 235, 235);
     font-size: 1.1rem;
     font-weight: bold;
-    padding: 1rem;
+    padding: 1.2rem;
     animation: fadeInRight;
     animation-duration: 2s;
   }
@@ -173,8 +173,8 @@ body {
   }
 
   .fotoPlaya {
-    width: 400px;
-    height: 500px;
+    width: 24rem;
+    height: 30rem;
   }
 }
 
